@@ -24,9 +24,9 @@ der_type_encoder_f OCTET_STRING_encode_der;
 xer_type_encoder_f OCTET_STRING_encode_xer;
 xer_type_encoder_f OCTET_STRING_encode_xer_ascii;
 
-/***********************************
- * Some handy conversion routines. *
- ***********************************/
+/******************************
+ * Handy conversion routines. *
+ ******************************/
 
 /*
  * This function clears the previous value of the OCTET STRING (if any)
@@ -39,14 +39,29 @@ xer_type_encoder_f OCTET_STRING_encode_xer_ascii;
  */
 int OCTET_STRING_fromBuf(OCTET_STRING_t *s, const char *str, int size);
 
+/* Handy conversion from the C string into the OCTET STRING. */
+#define	OCTET_STRING_fromString(s, str)	OCTET_STRING_fromBuf(s, str, -1);
+
 /*
  * Allocate and fill the new OCTET STRING and return a pointer to the newly
  * allocated object. NULL is permitted in str: the function will just allocate
  * empty OCTET STRING.
  */
-OCTET_STRING_t *OCTET_STRING_new_fromBuf(const char *str, int size);
+OCTET_STRING_t *OCTET_STRING_new_fromBuf(asn_TYPE_descriptor_t *td,
+	const char *str, int size);
 
-/* Handy conversion from the C string into the OCTET STRING. */
-#define	OCTET_STRING_fromString(s, str)	OCTET_STRING_fromBuf(s, str, -1);
+/****************************
+ * Internally useful stuff. *
+ ****************************/
+
+typedef struct asn_OCTET_STRING_specifics_s {
+	/*
+	 * Target structure description.
+	 */
+	int struct_size;	/* Size of the structure */
+	int ctx_offset;		/* Offset of the asn_struct_ctx_t member */
+
+	int subvariant;		/* {0,1,2} for O-S, BIT STRING or ANY */
+} asn_OCTET_STRING_specifics_t;
 
 #endif	/* _OCTET_STRING_H_ */
